test/cases/compile_errors/reject_extern_function_definitions_with_body.zig
extern "c" fn definitelyNotInLibC(a: i32, b: i32) i32 {
    return a + b;
}

// error
//
// :1:1: error: extern functions have no body
